--- a/form.html
+++ b/form.html
@@ -40,6 +40,27 @@
             <option>hydrabad</option>
             <option>pune</option>
             </select>
+            <br>
+            <br>
+
+            <!-- checkbox -->
+             <label> Education</label>
+             <br>
+             <input type="checkbox" ><br>
+             <label>10th</label><br>
+             <input type="checkbox" ><br>
+                <label>12th</label><br>
+                <input type="checkbox" ><br>
+                <label>graduation</label><br>
+                <input type="checkbox" ><br>
+                <label>post graduation</label><br>
+                <input type="checkbox" ><br>
+                <label>phd</label><br>
+                <br>
+                <label>upload your file</label>
+                <input type="file" >
+                <br>
+
 
 
 
